--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="container">
         <div>
           <div class="joe_img">
-            <img src="./images/FB_IMG_1675351015244.jpg" alt="Joe" />
+            <img src="./FB_IMG_1675351015244.jpg" alt="Joe" />
             <p>-John Doe-</p>
           </div>
           <p>
@@ -52,7 +52,7 @@
 
         <div>
           <div class="joe_img">
-            <img src="./images/IMG_3686~3.JPG" alt="Joe" />
+            <img src="./IMG_3686~3.JPG" alt="Joe" />
             <p>-John Doe-</p>
           </div>
           <p>
@@ -64,7 +64,7 @@
 
         <div>
           <div class="joe_img">
-            <img src="./images/FB_IMG_1675351015244.jpg" alt="Joe" />
+            <img src="./FB_IMG_1675351015244.jpg" alt="Joe" />
             <p>-John Doe-</p>
           </div>
           <p>
